--- a/competition.html
+++ b/competition.html
@@ -8,9 +8,17 @@
 </head>
 
 <body>
+    <header>
+
+    </header>
+
     <table>
 
     </table>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
