--- a/competition.html
+++ b/competition.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Описание</title>
 </head>
 
 <body>
@@ -12,9 +12,7 @@
 
     </header>
 
-    <table>
 
-    </table>
 
     <footer>
 
