--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -29,7 +29,7 @@
         </tr>
 
         <tr>
-            <td>Жарим Каса</td>
+            <td><a href="konkurs1.html">Космический рассказ</a></td>
             <td>0 мест</td>
             <td>0 мест</td>
             <td>0 мест</td>
@@ -44,7 +44,7 @@
         </tr>
 
         <tr>
-            <td>Жарим шашлык</td>
+            <td><a href="konkurs2.html">Модель вселенной</a></td>
             <td>0 мест</td>
             <td>0 мест</td>
             <td>0 мест</td>
@@ -59,7 +59,37 @@
         </tr>
 
         <tr>
-            <td>Бухаем</td>
+            <td><a href="konkurs3.html">Галактический художник</a></td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+        </tr>
+
+        <tr>
+            <td><a href="konkurs4.html">Ракета будущего</a></td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+            <td>0 мест</td>
+        </tr>
+
+        <tr>
+            <td><a href="konkurs5.html">Ближний космос</a></td>
             <td>0 мест</td>
             <td>0 мест</td>
             <td>0 мест</td>
