--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -7,6 +7,7 @@
     <title>Расписание конкурсов</title>
     <style>
         body {
+            margin: 0px;
             padding: 0px;
             color: white;
             font-family: Arial, sans-serif;
@@ -17,57 +18,104 @@
             color: #63b3ed;
         }
 
+        .logo-div {
+            display: flex;
+            align-items: center;
+        }
+
+        .navbar {
+            margin-right: -18px;
+            margin-left: -18px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #2d3748;
+            padding: 10px 20px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .navbar-brand {
+            font-size: 1.5em;
+            font-weight: bold;
+            text-decoration: none;
+            color: white;
+        }
+
+        .navbar-toggler {
+            color: white;
+            display: none;
+            font-size: 1.5em;
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
+
+        .navbar-nav {
+            background-color: #2d3748;
+            display: flex;
+
+        }
+
+        .nav-link {
+            text-decoration: none;
+            color: white;
+            padding: 5px 10px;
+            transition: 0.3s;
+        }
+
+        .nav-link:hover {
+            background-color: #babbbb;
+            border-radius: 5px;
+        }
+
+        @media (max-width: 768px) {
+            .navbar-nav {
+                display: none;
+                flex-direction: column;
+                position: absolute;
+                top: 100px;
+                left: 0;
+                width: 100%;
+                background-color: #2d3748;
+                box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+                padding: 10px 0;
+            }
+
+            .navbar-nav.show {
+                display: flex;
+            }
+
+            .navbar-toggler {
+                display: block;
+            }
+        }
+
         main {
             display: grid;
             grid-template-rows: auto 1fr auto;
             /* 1fr для основного контента, auto для футера */
             min-height: 100vh;
             margin: 0;
-        }
-
-        header {
-            background-color: #2d3748;
-            padding: 20px 30px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-top: -10px;
-            margin-right: -20px;
-        }
-
-        header img {
-            height: 40px;
-        }
-
-        header nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 10px;
-        }
-
-        header nav a:hover {
-            color: #63b3ed;
-        }
-
-        #theme-toggle {
-            background-color: #4a5568;
-            color: white;
-            border: none;
-            border-radius: 50%;
-            padding: 5px 10px;
-            cursor: pointer;
+            padding: 0px;
         }
 
         h1 {
-            text-align: center;
+            text-align: left;
         }
 
         .content-div {
             padding: 30px;
+            text-align: center;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: flex-start;
+            align-items: center;
+            flex-direction: column;
         }
 
         .content-div td {
             height: 50px;
+            padding: 0px 5px;
             border: 2px rgb(179, 179, 179) solid;
             text-align: center;
         }
@@ -85,119 +133,122 @@
 
 <body>
     <main>
-        <header>
-            <div style="display: flex; align-items: center;">
-                <img src="../img/logo.png" alt="Логотип" style="height: 40px; margin-right: 10px;">
-                <span style="font-size: 18px; font-weight: bold;">Мой город - мой космос</span>
+        <nav class="navbar">
+            <div class="logo-div">
+                <img src="../img/logo.jpg" alt="Логотип" style="height: 90px;">
+                <a class="navbar-brand" href="#">Мой город - мой космос</a>
             </div>
-            <nav>
-                <a href="#">Регистрация</a>
-                <a href="#">Авторизация</a>
-                <a href="#">Личный кабинет</a>
-                <a href="#">О нас</a>
-                <a href="#">Конкурсы</a>
-                <a href="#">Поиск</a>
-                <a href="#">Контакты</a>
-                <button id="theme-toggle">Тема</button>
-            </nav>
-        </header>
+
+            <button class="navbar-toggler" onclick="toggleMenu()">☰</button>
+            <div class="navbar-nav" id="navbarNav">
+                <a class="nav-link" href="#">Регистрация</a>
+                <a class="nav-link" href="#">Авторизация</a>
+                <a class="nav-link" href="#">Личный кабинет</a>
+                <a class="nav-link" href="#">О нас</a>
+                <a class="nav-link" href="#">Поиск</a>
+                <a class="nav-link" href="#">Контакты</a>
+            </div>
+        </nav>
+
         <div class="content-div">
 
+            <DIV>
+                <h1>Расписание конкурсов</h1>
+                <table>
 
-            <h1>Расписание конкурсов</h1>
-            <table>
+                    <tr>
+                        <td>Время проведения/Конкурсы</td>
+                        <td>c 9:00 до 10:00</td>
+                        <td>с 10:00 до 11:00</td>
+                        <td>с 11:00 до 12:00</td>
+                        <td>с 12:00 до 13:00</td>
+                        <td>с 13:00 до 14:00</td>
+                        <td>с 14:00 до 15:00</td>
+                        <td>с 15:00 до 16:00</td>
+                        <td>с 16:00 до 17:00</td>
+                        <td>с 17:00 до 18:00</td>
+                        <td>с 18:00 до 19:00</td>
+                        <td>с 20:00 до 21:00</td>
+                    </tr>
 
-                <tr>
-                    <td>Время проведения/Конкурсы</td>
-                    <td>c 9:00 до 10:00</td>
-                    <td>с 10:00 до 11:00</td>
-                    <td>с 11:00 до 12:00</td>
-                    <td>с 12:00 до 13:00</td>
-                    <td>с 13:00 до 14:00</td>
-                    <td>с 14:00 до 15:00</td>
-                    <td>с 15:00 до 16:00</td>
-                    <td>с 16:00 до 17:00</td>
-                    <td>с 17:00 до 18:00</td>
-                    <td>с 18:00 до 19:00</td>
-                    <td>с 20:00 до 21:00</td>
-                </tr>
+                    <tr>
+                        <td><a href="konkurs1.html">Космический рассказ</a></td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                    </tr>
 
-                <tr>
-                    <td><a href="konkurs1.html">Космический рассказ</a></td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                </tr>
+                    <tr>
+                        <td><a href="konkurs2.html">Модель вселенной</a></td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                    </tr>
 
-                <tr>
-                    <td><a href="konkurs2.html">Модель вселенной</a></td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                </tr>
+                    <tr>
+                        <td><a href="konkurs3.html">Галактический художник</a></td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                    </tr>
 
-                <tr>
-                    <td><a href="konkurs3.html">Галактический художник</a></td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                </tr>
+                    <tr>
+                        <td><a href="konkurs4.html">Ракета будущего</a></td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                    </tr>
 
-                <tr>
-                    <td><a href="konkurs4.html">Ракета будущего</a></td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                </tr>
+                    <tr>
+                        <td><a href="konkurs5.html">Ближний космос</a></td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                        <td>0 мест</td>
+                    </tr>
 
-                <tr>
-                    <td><a href="konkurs5.html">Ближний космос</a></td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                    <td>0 мест</td>
-                </tr>
+                </table>
+            </DIV>
 
-            </table>
         </div>
 
         <footer>
@@ -213,6 +264,10 @@
         document.body.style.backgroundColor = document.body.style.backgroundColor === 'white' ? '#1a202c' : 'white';
         document.body.style.color = document.body.style.color === 'black' ? 'white' : 'black';
     });
+
+    function toggleMenu() {
+        document.getElementById('navbarNav').classList.toggle('show');
+    }
 </script>
 
 </html>
