--- a/pages/index.html
+++ b/pages/index.html
@@ -11,23 +11,88 @@
             background-color: #1a202c;
             color: white;
         }
-        header {
-            background-color: #2d3748;
-            padding: 10px 20px;
+        
+        .logo-div {
+            display: flex;
+            align-items: center;
+        }
+
+        .navbar {
             display: flex;
             justify-content: space-between;
             align-items: center;
+            background-color: #2d3748;
+            padding: 10px 20px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
-        header img {
-            height: 40px;
-        }
-        header nav a {
-            color: white;
+
+        .navbar-brand {
+            font-size: 1.5em;
+            font-weight: bold;
             text-decoration: none;
-            margin: 0 10px;
+            color: white;
         }
-        header nav a:hover {
-            color: #63b3ed;
+
+        .navbar-toggler {
+            color: white;
+            display: none;
+            font-size: 1.5em;
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
+
+        .navbar-toggler:hover {
+            background-color: #babbbb;
+            border-radius: 5px;
+        }
+
+        .navbar-nav {
+            background-color: #2d3748;
+            display: flex;
+
+        }
+
+        .nav-button {
+            text-decoration: none;
+            color: white;
+            padding: 5px 10px;
+            transition: 0.3s;
+            background-color: #2d3748;
+        }
+
+        .nav-link {
+            text-decoration: none;
+            color: white;
+            padding: 5px 10px;
+            transition: 0.3s;
+        }
+
+        .nav-link:hover {
+            background-color: #babbbb;
+            border-radius: 5px;
+        }
+
+        @media (max-width: 1050px) {
+            .navbar-nav {
+                display: none;
+                flex-direction: column;
+                position: absolute;
+                top: 100px;
+                left: 0;
+                width: 100%;
+                background-color: #2d3748;
+                box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+                padding: 10px 0;
+            }
+
+            .navbar-nav.show {
+                display: flex;
+            }
+
+            .navbar-toggler {
+                display: block;
+            }
         }
         #theme-toggle {
             background-color: #4a5568;
@@ -203,22 +268,23 @@
     </style>
 </head>
 <body>
-    <header>
-        <div style="display: flex; align-items: center;">
-            <img src="../img/logo.png" alt="Логотип" style="height: 40px; margin-right: 10px;">
-            <span style="font-size: 18px; font-weight: bold;">Мой город - мой космос</span>
+    <nav class="navbar">
+        <div class="logo-div">
+            <img src="../img/logo.jpg" alt="Логотип" style="height: 90px;">
+            <a class="navbar-brand" href="#">Мой город - мой космос</a>
         </div>
-        <nav>
-            <a href="#">Регистрация</a>
-            <a href="#">Авторизация</a>
-            <a href="#">Личный кабинет</a>
-            <a href="#">О нас</a>
-            <a href="#">Конкурсы</a>
-            <a href="#">Поиск</a>
-            <a href="#">Контакты</a>
-            <button id="theme-toggle">Тема</button>
-        </nav>
-    </header>    
+
+        <button class="navbar-toggler" onclick="toggleMenu()">☰</button>
+        <div class="navbar-nav" id="navbarNav">
+            <a class="nav-link" href="registration.html">Регистрация</a>
+            <a class="nav-link" href="authorization.html">Авторизация</a>
+            <a class="nav-link" href="account.html">Личный кабинет</a>
+            <a class="nav-link" href="index.html">Главная</a>
+            <a class="nav-link" href="#">Поиск</a>
+            <a class="nav-link" href="#">Контакты</a>
+            <button class="nav-button" id="theme-toggle">Тема</button>
+        </div>
+    </nav>
     <section>
         <h2>Популярные конкурсы</h2>
         <div class="search-form">
@@ -350,6 +416,10 @@
             document.body.style.backgroundColor = document.body.style.backgroundColor === 'white' ? '#1a202c' : 'white';
             document.body.style.color = document.body.style.color === 'black' ? 'white' : 'black';
         });
+        
+        function toggleMenu() {
+            document.getElementById('navbarNav').classList.toggle('show');
+        }
     </script>
 </body>
 </html>
