--- a/pages/registration.html
+++ b/pages/registration.html
@@ -11,27 +11,82 @@
             background-color: #1a202c;
             color: white;
         }
-
-        header {
-            background-color: #2d3748;
-            padding: 10px 20px;
+        .navbar {
             display: flex;
             justify-content: space-between;
             align-items: center;
+            background-color: #2d3748;
+            padding: 10px 20px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
-        header img {
-            height: 40px;
-        }
-
-        header nav a {
-            color: white;
+        .navbar-brand {
+            font-size: 1.5em;
+            font-weight: bold;
             text-decoration: none;
-            margin: 0 10px;
+            color: white;
         }
 
-        header nav a:hover {
-            color: #63b3ed;
+        .navbar-toggler {
+            color: white;
+            display: none;
+            font-size: 1.5em;
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
+
+        .navbar-toggler:hover {
+            background-color: #babbbb;
+            border-radius: 5px;
+        }
+
+        .navbar-nav {
+            background-color: #2d3748;
+            display: flex;
+
+        }
+
+        .nav-button {
+            text-decoration: none;
+            color: white;
+            padding: 5px 10px;
+            transition: 0.3s;
+            background-color: #2d3748;
+        }
+
+        .nav-link {
+            text-decoration: none;
+            color: white;
+            padding: 5px 10px;
+            transition: 0.3s;
+        }
+
+        .nav-link:hover {
+            background-color: #babbbb;
+            border-radius: 5px;
+        }
+
+        @media (max-width: 1050px) {
+            .navbar-nav {
+                display: none;
+                flex-direction: column;
+                position: absolute;
+                top: 100px;
+                left: 0;
+                width: 100%;
+                background-color: #2d3748;
+                box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+                padding: 10px 0;
+            }
+
+            .navbar-nav.show {
+                display: flex;
+            }
+
+            .navbar-toggler {
+                display: block;
+            }
         }
 
         #theme-toggle {
@@ -164,24 +219,23 @@
     </style>
 </head>
 <body>
-    <header>
-        <div>
-            <img src="../img/logo.png" alt="Логотип">
+    <nav class="navbar">
+        <div class="logo-div">
+            <img src="../img/logo.jpg" alt="Логотип" style="height: 90px;">
+            <a class="navbar-brand" href="#">Мой город - мой космос</a>
         </div>
-        <div class="center-text">
-            <span>Мой город <br> - <br>мой космос</span>
+
+        <button class="navbar-toggler" onclick="toggleMenu()">☰</button>
+        <div class="navbar-nav" id="navbarNav">
+            <a class="nav-link" href="registration.html">Регистрация</a>
+            <a class="nav-link" href="authorization.html">Авторизация</a>
+            <a class="nav-link" href="account.html">Личный кабинет</a>
+            <a class="nav-link" href="index.html">Главная</a>
+            <a class="nav-link" href="#">Поиск</a>
+            <a class="nav-link" href="#">Контакты</a>
+            <button class="nav-button" id="theme-toggle">Тема</button>
         </div>
-        <nav>
-            <a href="registration.html">Регистрация</a>
-            <a href="authorization.html">Авторизация</a>
-            <a href="#">Личный кабинет</a>
-            <a href="#">О нас</a>
-            <a href="#">Конкурсы</a>
-            <a href="#">Поиск</a>
-            <a href="#">Контакты</a>
-            <button id="theme-toggle">Тема</button>
-        </nav>
-    </header>
+    </nav>
 
     <div class="registration-container">
         <div class="registration-form">
