--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -149,10 +149,10 @@
 
             <button class="navbar-toggler" onclick="toggleMenu()">☰</button>
             <div class="navbar-nav" id="navbarNav">
-                <a class="nav-link" href="#">Регистрация</a>
-                <a class="nav-link" href="#">Авторизация</a>
-                <a class="nav-link" href="#">Личный кабинет</a>
-                <a class="nav-link" href="#">О нас</a>
+                <a class="nav-link" href="registration.html">Регистрация</a>
+                <a class="nav-link" href="authorization.html">Авторизация</a>
+                <a class="nav-link" href="account.html">Личный кабинет</a>
+                <a class="nav-link" href="index.html">Главная</a>
                 <a class="nav-link" href="#">Поиск</a>
                 <a class="nav-link" href="#">Контакты</a>
                 <button class="nav-button" id="theme-toggle">Тема</button>
