--- a/pages/competition.html
+++ b/pages/competition.html
@@ -4,19 +4,293 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Описание</title>
+    <title>Расписание конкурсов</title>
+    <style>
+        body {
+            margin: 0px;
+            padding: 0px;
+            color: white;
+            font-family: Arial, sans-serif;
+            background-color: #1a202c;
+        }
+
+        body a {
+            color: #63b3ed;
+        }
+
+        .logo-div {
+            display: flex;
+            align-items: center;
+        }
+
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #2d3748;
+            padding: 10px 20px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .navbar-brand {
+            font-size: 1.5em;
+            font-weight: bold;
+            text-decoration: none;
+            color: white;
+        }
+
+        .navbar-toggler {
+            color: white;
+            display: none;
+            font-size: 1.5em;
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
+
+        .navbar-toggler:hover {
+            background-color: #babbbb;
+            border-radius: 5px;
+        }
+
+        .navbar-nav {
+            background-color: #2d3748;
+            display: flex;
+
+        }
+
+        .nav-button {
+            text-decoration: none;
+            color: white;
+            padding: 5px 10px;
+            transition: 0.3s;
+            background-color: #2d3748;
+        }
+
+        .nav-link {
+            text-decoration: none;
+            color: white;
+            padding: 5px 10px;
+            transition: 0.3s;
+        }
+
+        .nav-link:hover {
+            background-color: #babbbb;
+            border-radius: 5px;
+        }
+
+        @media (max-width: 1050px) {
+            .navbar-nav {
+                display: none;
+                flex-direction: column;
+                position: absolute;
+                top: 100px;
+                left: 0;
+                width: 100%;
+                background-color: #2d3748;
+                box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+                padding: 10px 0;
+            }
+
+            .navbar-nav.show {
+                display: flex;
+            }
+
+            .navbar-toggler {
+                display: block;
+            }
+        }
+
+        main {
+            display: grid;
+            grid-template-rows: auto 1fr auto;
+            /* 1fr для основного контента, auto для футера */
+            min-height: 100vh;
+            margin: 0;
+            padding: 0px;
+        }
+
+        h1 {
+            text-align: left;
+        }
+
+        .content-div {
+            padding: 30px;
+            font-size: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: flex-start;
+            align-items: center;
+            flex-direction: column;
+            padding-left: 40px;
+        }
+
+        footer {
+            background-color: #2d3748;
+            text-align: center;
+            padding: 10px;
+        }
+
+        .img-div {
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        .description-p {
+            width: 60%;
+        }
+
+        .content-div img {
+            border-radius: 15px;
+            margin-right: 30px;
+            width: 500px;
+        }
+
+        .raiting-div {
+            text-align: left;
+        }
+
+        .content-div button {
+            padding: 10px;
+            font-size: 20px;
+            border-radius: 15px;
+        }
+
+        .content-div button:hover {
+            background-color: rgb(151, 151, 151);
+        }
+    </style>
 </head>
 
 <body>
-    <header>
+    <main>
+        <nav class="navbar">
+            <div class="logo-div">
+                <img src="../img/logo.jpg" alt="Логотип" style="height: 90px;">
+                <a class="navbar-brand" href="#">Мой город - мой космос</a>
+            </div>
 
-    </header>
+            <button class="navbar-toggler" onclick="toggleMenu()">☰</button>
+            <div class="navbar-nav" id="navbarNav">
+                <a class="nav-link" href="registration.html">Регистрация</a>
+                <a class="nav-link" href="authorization.html">Авторизация</a>
+                <a class="nav-link" href="account.html">Личный кабинет</a>
+                <a class="nav-link" href="index.html">Главная</a>
+                <a class="nav-link" href="#">Поиск</a>
+                <a class="nav-link" href="#">Контакты</a>
+                <button class="nav-button" id="theme-toggle">Тема</button>
+            </div>
+        </nav>
 
+        <div class="content-div">
 
+            <DIV>
+                <h1>Конкурс "Космический рассказ"</h1>
+                <div class="img-div">
+                    <img src="../img/konk1.png">
+                    <div class="raiting-div">
+                        <p>Рейтинг: ⭐⭐⭐⭐⭐</p>
+                        <p>Записалось: 20</p>
+                    </div>
+                </div>
 
-    <footer>
+                <p class="description-p">
+                    Напиши захватывающую историю о покорении далёких галактик, встрече с инопланетянами или загадках
+                    чёрных дыр. Открой читателям дверь в бесконечный космос!
+                </p>
+                <button>Записаться</button>
+            </DIV>
 
-    </footer>
+            <DIV>
+                <h1>Конкурс "Модель вселенной"</h1>
+                <div class="img-div">
+                    <img src="../img/konk2.jpg">
+                    <div class="raiting-div">
+                        <p>Рейтинг: ⭐⭐⭐⭐⭐</p>
+                        <p>Записалось: 20</p>
+                    </div>
+                </div>
+
+                <p class="description-p">
+                    Представь, что ты архитектор Вселенной! Создай модель галактики, планетной системы или даже целого
+                    космоса. Используй любые материалы: 3D-графику, макеты, рисунки или компьютерные симуляции. Покажи,
+                    как ты представляешь бесконечный космос и его законы!
+                </p>
+                <button>Записаться</button>
+            </DIV>
+
+            <DIV>
+                <h1>Конкурс "Галактический художник"</h1>
+                <div class="img-div">
+                    <img src="../img/konk3.png">
+                    <div class="raiting-div">
+                        <p>Рейтинг: ⭐⭐⭐⭐⭐</p>
+                        <p>Записалось: 20</p>
+                    </div>
+                </div>
+
+                <p class="description-p">
+                    Создай уникальную космическую картину! Изобрази планеты, звезды, туманности или фантастических
+                    инопланетян. Лучшие работы украсят выставку будущего!
+                </p>
+                <button>Записаться</button>
+            </DIV>
+
+            <DIV>
+                <h1>Конкурс "Ракета будущего"</h1>
+                <div class="img-div">
+                    <img src="../img/konk4.jpg">
+                    <div class="raiting-div">
+                        <p>Рейтинг: ⭐⭐⭐⭐⭐</p>
+                        <p>Записалось: 20</p>
+                    </div>
+                </div>
+
+                <p class="description-p">
+                    ССпроектируй и нарисуй свою идеальную ракету! Какой она будет – гиперскоростной, межгалактической
+                    или даже с квантовым двигателем?
+                </p>
+                <button>Записаться</button>
+            </DIV>
+
+            <DIV>
+                <h1>Конкурс "Ближний космос"</h1>
+                <div class="img-div">
+                    <img src="../img/konk5.jpg">
+                    <div class="raiting-div">
+                        <p>Рейтинг: ⭐⭐⭐⭐⭐</p>
+                        <p>Записалось: 20</p>
+                    </div>
+                </div>
+
+                <p class="description-p">
+                    Изучи и покажи, каким ты видишь околоземное пространство! Спутники, космические станции, луноходы,
+                    астероиды – создай макет, рисунок или 3D-модель объектов, находящихся рядом с нашей планетой. Может,
+                    ты придумаешь новый космический аппарат или колонию на Луне? Дай волю фантазии и покори ближний
+                    космос!
+                </p>
+                <button>Записаться</button>
+            </DIV>
+
+        </div>
+
+        <footer>
+            <p>Контакты: <a href="tel:+74852729361">+7 (4852) 72-93-61</a></p>
+            <p>Email: <a href="mailto:yarplaneta@gmail.com">yarplaneta@gmail.com</a></p>
+        </footer>
+
+    </main>
 </body>
+<script>
+    const themeToggle = document.getElementById('theme-toggle');
+    themeToggle.addEventListener('click', () => {
+        document.body.style.backgroundColor = document.body.style.backgroundColor === 'white' ? '#1a202c' : 'white';
+        document.body.main.style.color = document.body.style.color === 'black' ? 'white' : 'black';
+    });
+
+    function toggleMenu() {
+        document.getElementById('navbarNav').classList.toggle('show');
+    }
+</script>
 
 </html>
