--- a/pages/competition.html
+++ b/pages/competition.html
@@ -176,8 +176,9 @@
                 <a class="nav-link" href="authorization.html">Авторизация</a>
                 <a class="nav-link" href="account.html">Личный кабинет</a>
                 <a class="nav-link" href="index.html">Главная</a>
+                <a class="nav-link" href="schedule.html">Конкурсы</a>
                 <a class="nav-link" href="#">Поиск</a>
-                <a class="nav-link" href="#">Контакты</a>
+                <a class="nav-link" href="#footer">Контакты</a>
                 <button class="nav-button" id="theme-toggle">Тема</button>
             </div>
         </nav>
@@ -274,7 +275,7 @@
 
         </div>
 
-        <footer>
+        <footer id="footer">
             <p>Контакты: <a href="tel:+74852729361">+7 (4852) 72-93-61</a></p>
             <p>Email: <a href="mailto:yarplaneta@gmail.com">yarplaneta@gmail.com</a></p>
         </footer>
