--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -153,8 +153,9 @@
                 <a class="nav-link" href="authorization.html">Авторизация</a>
                 <a class="nav-link" href="account.html">Личный кабинет</a>
                 <a class="nav-link" href="index.html">Главная</a>
+                <a class="nav-link" href="schedule.html">Конкурсы</a>
                 <a class="nav-link" href="#">Поиск</a>
-                <a class="nav-link" href="#">Контакты</a>
+                <a class="nav-link" href="#footer">Контакты</a>
                 <button class="nav-button" id="theme-toggle">Тема</button>
             </div>
         </nav>
@@ -181,7 +182,7 @@
                     </tr>
 
                     <tr>
-                        <td><a href="konkurs1.html">Космический рассказ</a></td>
+                        <td><a href="competition.html">Космический рассказ</a></td>
                         <td>0 мест</td>
                         <td>0 мест</td>
                         <td>0 мест</td>
@@ -196,7 +197,7 @@
                     </tr>
 
                     <tr>
-                        <td><a href="konkurs2.html">Модель вселенной</a></td>
+                        <td><a href="competition.html">Модель вселенной</a></td>
                         <td>0 мест</td>
                         <td>0 мест</td>
                         <td>0 мест</td>
@@ -211,7 +212,7 @@
                     </tr>
 
                     <tr>
-                        <td><a href="konkurs3.html">Галактический художник</a></td>
+                        <td><a href="competition.html">Галактический художник</a></td>
                         <td>0 мест</td>
                         <td>0 мест</td>
                         <td>0 мест</td>
@@ -226,7 +227,7 @@
                     </tr>
 
                     <tr>
-                        <td><a href="konkurs4.html">Ракета будущего</a></td>
+                        <td><a href="competition.html">Ракета будущего</a></td>
                         <td>0 мест</td>
                         <td>0 мест</td>
                         <td>0 мест</td>
@@ -241,7 +242,7 @@
                     </tr>
 
                     <tr>
-                        <td><a href="konkurs5.html">Ближний космос</a></td>
+                        <td><a href="competition.html">Ближний космос</a></td>
                         <td>0 мест</td>
                         <td>0 мест</td>
                         <td>0 мест</td>
@@ -260,7 +261,7 @@
 
         </div>
 
-        <footer>
+        <footer id="footer">
             <p>Контакты: <a href="tel:+74852729361">+7 (4852) 72-93-61</a></p>
             <p>Email: <a href="mailto:yarplaneta@gmail.com">yarplaneta@gmail.com</a></p>
         </footer>
