--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,10 @@
             color: white;
         }
 
-
+        .logo-div {
+            display: flex;
+            align-items: center;
+        }
 
         .navbar {
             display: flex;
